refactor: update date handling in DebtPositionDao and related classes